tests/sources/invalid/types/semantic_modulo_mismatch.fire
// Semantic type error: modulo requires same-type integer operands.

void modulo_mismatch() {
    int32 a = 5;
    int64 b = 6;  //~ ERROR FS-SEM-0002 @11
    int32 c = a % b;  //~ ERROR FS-SEM-0010 @17
}
